--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Manrope:wght@400;500;600;700;800&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Manrope:wght@400;500;600;700;800&family=Roboto:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href="./trai tim.jpg" type="image/x-icon">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>I Love you</title>
 </head>
+
 <body>
+    <div class="letter">
+        <div class="envelope">
+            <div class="envelope-flap"></div>
+            <div class="envelope-paper"></div>
+            <div class="envelope-detail"></div>
+        </div>
+        <div class="paper">
+            <div class="paper-content">
+                <div class="content-letter">
+
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="dad_container">
         <div>
             <button id="showButton">Bấm vào đây nè</button>
@@ -23,7 +41,7 @@
                     <h1 id="text-message_2" class="message-2"></h1>
                 </div>
             </div>
-            
+
             <div class="dad">
                 <div class="dad_lyric">
                     <div class="first lyric-1">
@@ -87,7 +105,8 @@
             </audio>
         </div>
     </div>
-    
+
 </body>
 <script src="./script.js"></script>
+
 </html>
